# game_liblary/routes/objects.routes.js
@@ -1,7 +1,7 @@
 const objects = require("../controllers/objects");
 module.exports = function(app){
     app.post('/createrGame',objects.createrGame )
-    app.post('/create_genre',objects.createrGenre )
-    app.post('/create_platform',objects.createrPlatform )
+    app.post('/createrGenre',objects.createrGenre )
+    app.post('/createrPlatform',objects.createrPlatform )
     app.post('/createrNews',objects.createrNews )
 }
